# kesha-was-bird-remaster

./: .gitignore  CMakeLists.txt  Makefile  Makefile.build  configure  generate-audio.py  generate-dialogs.py  generate-dtmf.py  generate-font.py  generate-text.py  generate-texture.py  ihx-to-sna.py  ihx-to-z80.py  sdcc.toolchain
assets/: en.json
cmake/Compiler/: SDCC-ASM.cmake
release/: kesha.tap
sources/: audio.c  audio.h  call_galina.c  call_galina.h  call_glitch.c  call_invalid.c  call_lab.c  call_ninja.c  call_pets.c  calls.h  credits.c  credits.h  days.c  days.h  dialogs.c  fb.c  fb.h  font.c  font.h  init.s  keyboard.h  lz4.c  lz4.h  main.c  phone.c  phone.h  runtime.c  runtime.h  texture.c  texture.h  tiles.c  tiles.h  types.h  vars.c  vars.h
